    space but means any modification of an unlocked file will lose the local
    (and possibly only) copy of the old version.
  * Enable annex.thin by default on upgrade from direct mode to v6, since
    direct mode made the same tradeoff.
  * fix: Adjusts unlocked files as configured by annex.thin.
  * persistent-sqlite is now a hard build dependency, since v6 repository
    mode needs it.
  * status: On crippled filesystems, was displaying M for all annexed files
    that were present. Probably caused by a change to what git status
    displays in this situation. Fixed by treating files git thinks are
    modified the same as typechanged files.
  * addurl: Added --batch and --with-files options.
  * Debian: Adjust build dependencies for webapp, DAV. Now available on
    mips, mipsel, but temporarily removed armel since build is failing
    there.
  * info: Fix "backend usage" numbers, which were counting present keys
    twice.
  * info --json: Improve json for "backend usage", using a nested object
    with fields for each backend instead of the previous weird nested lists.
    This may break existing parsers of this json output, if there were any.
  * whereis --json: Make url list be included in machine-parseable form.
  * test: Added --keep-failures option.
  * unused: Bug fix when a new file was added to the annex, and then
    removed (but not git rmed). git still has the add staged in this case,
    so the content should not be unused and was wrongly treated as such.
  * migrate: Copy over metadata to new key.
  * rekey: No longer copies over urls from the old to the new key.
    It makes sense for migrate to do that, but not for this low-level
    (and little used) plumbing command to.

 -- Joey Hess <id@joeyh.name>  Sat, 19 Dec 2015 13:31:17 -0400

git-annex (5.20151218) unstable; urgency=medium

  * Add S3 features to git-annex version output.
  * webdav: When testing the WebDAV server, send a file with content.